parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> multiple_statements
Rule 2     multiple_statements -> multiple_statements statement
Rule 3     multiple_statements -> statement
Rule 4     statement -> open
Rule 5     statement -> closed
Rule 6     open -> IF condition statement
Rule 7     open -> IF condition closed ELSE open
Rule 8     open -> WHILE condition open
Rule 9     closed -> simple
Rule 10    closed -> block
Rule 11    closed -> IF condition closed ELSE closed
Rule 12    closed -> WHILE condition closed
Rule 13    condition -> L_PAREN expr R_PAREN
Rule 14    declaration -> TYPE ID SEMICOLON
Rule 15    declaration -> TYPE ID ASSIGN expr SEMICOLON
Rule 16    block -> left_flower multiple_statements right_flower
Rule 17    block -> left_flower right_flower
Rule 18    left_flower -> L_FLOWBRACE
Rule 19    right_flower -> R_FLOWBRACE
Rule 20    simple -> expr SEMICOLON
Rule 21    simple -> header
Rule 22    simple -> declaration
Rule 23    simple -> function
Rule 24    simple -> SEMICOLON
Rule 25    function_call -> ID L_PAREN call_params R_PAREN
Rule 26    call_params -> empty
Rule 27    call_params -> yes_call_params end_call_params
Rule 28    call_params -> end_call_params
Rule 29    yes_call_params -> yes_call_params expr COMMA
Rule 30    yes_call_params -> expr COMMA
Rule 31    end_call_params -> expr
Rule 32    yes_dec_params -> yes_dec_params TYPE expr COMMA
Rule 33    yes_dec_params -> yes_dec_params TYPE COMMA
Rule 34    yes_dec_params -> yes_dec_params TYPE MULTIPLY COMMA
Rule 35    yes_dec_params -> TYPE expr COMMA
Rule 36    yes_dec_params -> TYPE COMMA
Rule 37    yes_dec_params -> TYPE MULTIPLY COMMA
Rule 38    end_dec_params -> TYPE expr
Rule 39    end_dec_params -> TYPE
Rule 40    dec_params -> empty
Rule 41    dec_params -> yes_dec_params end_dec_params
Rule 42    dec_params -> end_dec_params
Rule 43    function -> TYPE ID L_PAREN dec_params R_PAREN function_2
Rule 44    function_2 -> SEMICOLON
Rule 45    function_2 -> block
Rule 46    header -> HASH INCLUDE STRING
Rule 47    header -> HASH INCLUDE HEADER_FILE
Rule 48    empty -> <empty>
Rule 49    expr -> expr assignment exprOR
Rule 50    expr -> exprOR
Rule 51    assignment -> ASSIGN
Rule 52    assignment -> PLUS_ASSIGN
Rule 53    assignment -> MINUS_ASSIGN
Rule 54    assignment -> MUL_ASSIGN
Rule 55    assignment -> DIV_ASSIGN
Rule 56    assignment -> AND_ASSIGN
Rule 57    assignment -> OR_ASSIGN
Rule 58    assignment -> XOR_ASSIGN
Rule 59    assignment -> MOD_ASSIGN
Rule 60    assignment -> L_SHIFT_ASSIGN
Rule 61    assignment -> R_SHIFT_ASSIGN
Rule 62    exprOR -> exprOR OR exprAND
Rule 63    exprOR -> exprAND
Rule 64    exprAND -> exprAND AND exprBITOR
Rule 65    exprAND -> exprBITOR
Rule 66    exprBITOR -> exprBITOR BIT_OR exprBITXOR
Rule 67    exprBITOR -> exprBITXOR
Rule 68    exprBITXOR -> exprBITXOR BIT_XOR exprBITAND
Rule 69    exprBITXOR -> exprBITAND
Rule 70    exprBITAND -> exprBITAND BIT_AND exprEQ
Rule 71    exprBITAND -> exprEQ
Rule 72    exprEQ -> exprEQ EQ exprRELOP
Rule 73    exprEQ -> exprEQ NE exprRELOP
Rule 74    exprEQ -> exprRELOP
Rule 75    exprRELOP -> exprRELOP relop exprSHIFT
Rule 76    exprRELOP -> exprSHIFT
Rule 77    relop -> LE
Rule 78    relop -> LT
Rule 79    relop -> GE
Rule 80    relop -> GT
Rule 81    exprSHIFT -> exprSHIFT L_SHIFT exprOP
Rule 82    exprSHIFT -> exprSHIFT R_SHIFT exprOP
Rule 83    exprSHIFT -> exprOP
Rule 84    exprOP -> exprOP PLUS term
Rule 85    exprOP -> exprOP MINUS term
Rule 86    exprOP -> term
Rule 87    term -> term MULTIPLY factor
Rule 88    term -> term DIVIDE factor
Rule 89    term -> term MOD factor
Rule 90    term -> factor
Rule 91    factor -> NOT factor
Rule 92    factor -> PLUS factor
Rule 93    factor -> MINUS factor
Rule 94    factor -> PLUS_PLUS factor
Rule 95    factor -> MINUS_MINUS factor
Rule 96    factor -> brace
Rule 97    brace -> L_PAREN expr R_PAREN
Rule 98    brace -> brace PLUS_PLUS
Rule 99    brace -> brace MINUS_MINUS
Rule 100   brace -> NUM
Rule 101   brace -> STRING
Rule 102   brace -> ID
Rule 103   brace -> CHAR
Rule 104   brace -> function_call
Rule 105   NUM -> INT_NUM
Rule 106   NUM -> FLOAT_NUM

Terminals, with rules where they appear

AND                  : 64
AND_ASSIGN           : 56
ASSIGN               : 15 51
BIT_AND              : 70
BIT_OR               : 66
BIT_XOR              : 68
CHAR                 : 103
COMMA                : 29 30 32 33 34 35 36 37
DIVIDE               : 88
DIV_ASSIGN           : 55
ELSE                 : 7 11
EQ                   : 72
FLOAT_NUM            : 106
GE                   : 79
GT                   : 80
HASH                 : 46 47
HEADER_FILE          : 47
ID                   : 14 15 25 43 102
IF                   : 6 7 11
INCLUDE              : 46 47
INT_NUM              : 105
LE                   : 77
LT                   : 78
L_FLOWBRACE          : 18
L_PAREN              : 13 25 43 97
L_SHIFT              : 81
L_SHIFT_ASSIGN       : 60
MINUS                : 85 93
MINUS_ASSIGN         : 53
MINUS_MINUS          : 95 99
MOD                  : 89
MOD_ASSIGN           : 59
MULTIPLY             : 34 37 87
MUL_ASSIGN           : 54
NE                   : 73
NOT                  : 91
OR                   : 62
OR_ASSIGN            : 57
PLUS                 : 84 92
PLUS_ASSIGN          : 52
PLUS_PLUS            : 94 98
R_FLOWBRACE          : 19
R_PAREN              : 13 25 43 97
R_SHIFT              : 82
R_SHIFT_ASSIGN       : 61
SEMICOLON            : 14 15 20 24 44
STRING               : 46 101
TYPE                 : 14 15 32 33 34 35 36 37 38 39 43
WHILE                : 8 12
XOR_ASSIGN           : 58
error                : 

Nonterminals, with rules where they appear

NUM                  : 100
assignment           : 49
block                : 10 45
brace                : 96 98 99
call_params          : 25
closed               : 5 7 11 11 12
condition            : 6 7 8 11 12
dec_params           : 43
declaration          : 22
empty                : 26 40
end_call_params      : 27 28
end_dec_params       : 41 42
expr                 : 13 15 20 29 30 31 32 35 38 49 97
exprAND              : 62 63 64
exprBITAND           : 68 69 70
exprBITOR            : 64 65 66
exprBITXOR           : 66 67 68
exprEQ               : 70 71 72 73
exprOP               : 81 82 83 84 85
exprOR               : 49 50 62
exprRELOP            : 72 73 74 75
exprSHIFT            : 75 76 81 82
factor               : 87 88 89 90 91 92 93 94 95
function             : 23
function_2           : 43
function_call        : 104
header               : 21
left_flower          : 16 17
multiple_statements  : 1 2 16
open                 : 4 7 8
relop                : 75
right_flower         : 16 17
simple               : 9
start                : 0
statement            : 2 3 6
term                 : 84 85 86 87 88 89
yes_call_params      : 27 29
yes_dec_params       : 32 33 34 41

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . multiple_statements
    (2) multiple_statements -> . multiple_statements statement
    (3) multiple_statements -> . statement
    (4) statement -> . open
    (5) statement -> . closed
    (6) open -> . IF condition statement
    (7) open -> . IF condition closed ELSE open
    (8) open -> . WHILE condition open
    (9) closed -> . simple
    (10) closed -> . block
    (11) closed -> . IF condition closed ELSE closed
    (12) closed -> . WHILE condition closed
    (20) simple -> . expr SEMICOLON
    (21) simple -> . header
    (22) simple -> . declaration
    (23) simple -> . function
    (24) simple -> . SEMICOLON
    (16) block -> . left_flower multiple_statements right_flower
    (17) block -> . left_flower right_flower
    (49) expr -> . expr assignment exprOR
    (50) expr -> . exprOR
    (46) header -> . HASH INCLUDE STRING
    (47) header -> . HASH INCLUDE HEADER_FILE
    (14) declaration -> . TYPE ID SEMICOLON
    (15) declaration -> . TYPE ID ASSIGN expr SEMICOLON
    (43) function -> . TYPE ID L_PAREN dec_params R_PAREN function_2
    (18) left_flower -> . L_FLOWBRACE
    (62) exprOR -> . exprOR OR exprAND
    (63) exprOR -> . exprAND
    (64) exprAND -> . exprAND AND exprBITOR
    (65) exprAND -> . exprBITOR
    (66) exprBITOR -> . exprBITOR BIT_OR exprBITXOR
    (67) exprBITOR -> . exprBITXOR
    (68) exprBITXOR -> . exprBITXOR BIT_XOR exprBITAND
    (69) exprBITXOR -> . exprBITAND
    (70) exprBITAND -> . exprBITAND BIT_AND exprEQ
    (71) exprBITAND -> . exprEQ
    (72) exprEQ -> . exprEQ EQ exprRELOP
    (73) exprEQ -> . exprEQ NE exprRELOP
    (74) exprEQ -> . exprRELOP
    (75) exprRELOP -> . exprRELOP relop exprSHIFT
    (76) exprRELOP -> . exprSHIFT
    (81) exprSHIFT -> . exprSHIFT L_SHIFT exprOP
    (82) exprSHIFT -> . exprSHIFT R_SHIFT exprOP
    (83) exprSHIFT -> . exprOP
    (84) exprOP -> . exprOP PLUS term
    (85) exprOP -> . exprOP MINUS term
    (86) exprOP -> . term
    (87) term -> . term MULTIPLY factor
    (88) term -> . term DIVIDE factor
    (89) term -> . term MOD factor
    (90) term -> . factor
    (91) factor -> . NOT factor
    (92) factor -> . PLUS factor
    (93) factor -> . MINUS factor
    (94) factor -> . PLUS_PLUS factor
    (95) factor -> . MINUS_MINUS factor
    (96) factor -> . brace
    (97) brace -> . L_PAREN expr R_PAREN
    (98) brace -> . brace PLUS_PLUS
    (99) brace -> . brace MINUS_MINUS
    (100) brace -> . NUM
    (101) brace -> . STRING
    (102) brace -> . ID
    (103) brace -> . CHAR
    (104) brace -> . function_call
    (105) NUM -> . INT_NUM
    (106) NUM -> . FLOAT_NUM
    (25) function_call -> . ID L_PAREN call_params R_PAREN

    IF              shift and go to state 6
    WHILE           shift and go to state 7
    SEMICOLON       shift and go to state 11
    HASH            shift and go to state 17
    TYPE            shift and go to state 19
    L_FLOWBRACE     shift and go to state 22
    NOT             shift and go to state 35
    PLUS            shift and go to state 31
    MINUS           shift and go to state 33
    PLUS_PLUS       shift and go to state 36
    MINUS_MINUS     shift and go to state 37
    L_PAREN         shift and go to state 21
    STRING          shift and go to state 18
    ID              shift and go to state 20
    CHAR            shift and go to state 40
    INT_NUM         shift and go to state 42
    FLOAT_NUM       shift and go to state 43

    start                          shift and go to state 1
    multiple_statements            shift and go to state 2
    statement                      shift and go to state 3
    open                           shift and go to state 4
    closed                         shift and go to state 5
    simple                         shift and go to state 8
    block                          shift and go to state 9
    expr                           shift and go to state 10
    header                         shift and go to state 12
    declaration                    shift and go to state 13
    function                       shift and go to state 14
    left_flower                    shift and go to state 15
    exprOR                         shift and go to state 16
    exprAND                        shift and go to state 23
    exprBITOR                      shift and go to state 24
    exprBITXOR                     shift and go to state 25
    exprBITAND                     shift and go to state 26
    exprEQ                         shift and go to state 27
    exprRELOP                      shift and go to state 28
    exprSHIFT                      shift and go to state 29
    exprOP                         shift and go to state 30
    term                           shift and go to state 32
    factor                         shift and go to state 34
    brace                          shift and go to state 38
    NUM                            shift and go to state 39
    function_call                  shift and go to state 41

state 1

    (0) S' -> start .



state 2

    (1) start -> multiple_statements .
    (2) multiple_statements -> multiple_statements . statement
    (4) statement -> . open
    (5) statement -> . closed
    (6) open -> . IF condition statement
    (7) open -> . IF condition closed ELSE open
    (8) open -> . WHILE condition open
    (9) closed -> . simple
    (10) closed -> . block
    (11) closed -> . IF condition closed ELSE closed
    (12) closed -> . WHILE condition closed
    (20) simple -> . expr SEMICOLON
    (21) simple -> . header
    (22) simple -> . declaration
    (23) simple -> . function
    (24) simple -> . SEMICOLON
    (16) block -> . left_flower multiple_statements right_flower
    (17) block -> . left_flower right_flower
    (49) expr -> . expr assignment exprOR
    (50) expr -> . exprOR
    (46) header -> . HASH INCLUDE STRING
    (47) header -> . HASH INCLUDE HEADER_FILE
    (14) declaration -> . TYPE ID SEMICOLON
    (15) declaration -> . TYPE ID ASSIGN expr SEMICOLON
    (43) function -> . TYPE ID L_PAREN dec_params R_PAREN function_2
    (18) left_flower -> . L_FLOWBRACE
    (62) exprOR -> . exprOR OR exprAND
    (63) exprOR -> . exprAND
    (64) exprAND -> . exprAND AND exprBITOR
    (65) exprAND -> . exprBITOR
    (66) exprBITOR -> . exprBITOR BIT_OR exprBITXOR
    (67) exprBITOR -> . exprBITXOR
    (68) exprBITXOR -> . exprBITXOR BIT_XOR exprBITAND
    (69) exprBITXOR -> . exprBITAND
    (70) exprBITAND -> . exprBITAND BIT_AND exprEQ
    (71) exprBITAND -> . exprEQ
    (72) exprEQ -> . exprEQ EQ exprRELOP
    (73) exprEQ -> . exprEQ NE exprRELOP
    (74) exprEQ -> . exprRELOP
    (75) exprRELOP -> . exprRELOP relop exprSHIFT
    (76) exprRELOP -> . exprSHIFT
    (81) exprSHIFT -> . exprSHIFT L_SHIFT exprOP
    (82) exprSHIFT -> . exprSHIFT R_SHIFT exprOP
    (83) exprSHIFT -> . exprOP
    (84) exprOP -> . exprOP PLUS term
    (85) exprOP -> . exprOP MINUS term
    (86) exprOP -> . term
    (87) term -> . term MULTIPLY factor
    (88) term -> . term DIVIDE factor
    (89) term -> . term MOD factor
    (90) term -> . factor
    (91) factor -> . NOT factor
    (92) factor -> . PLUS factor
    (93) factor -> . MINUS factor
    (94) factor -> . PLUS_PLUS factor
    (95) factor -> . MINUS_MINUS factor
    (96) factor -> . brace
    (97) brace -> . L_PAREN expr R_PAREN
    (98) brace -> . brace PLUS_PLUS
    (99) brace -> . brace MINUS_MINUS
    (100) brace -> . NUM
    (101) brace -> . STRING
    (102) brace -> . ID
    (103) brace -> . CHAR
    (104) brace -> . function_call
    (105) NUM -> . INT_NUM
    (106) NUM -> . FLOAT_NUM
    (25) function_call -> . ID L_PAREN call_params R_PAREN

    $end            reduce using rule 1 (start -> multiple_statements .)
    IF              shift and go to state 6
    WHILE           shift and go to state 7
    SEMICOLON       shift and go to state 11
    HASH            shift and go to state 17
    TYPE            shift and go to state 19
    L_FLOWBRACE     shift and go to state 22
    NOT             shift and go to state 35
    PLUS            shift and go to state 31
    MINUS           shift and go to state 33
    PLUS_PLUS       shift and go to state 36
    MINUS_MINUS     shift and go to state 37
    L_PAREN         shift and go to state 21
    STRING          shift and go to state 18
    ID              shift and go to state 20
    CHAR            shift and go to state 40
    INT_NUM         shift and go to state 42
    FLOAT_NUM       shift and go to state 43

    statement                      shift and go to state 44
    open                           shift and go to state 4
    closed                         shift and go to state 5
    simple                         shift and go to state 8
    block                          shift and go to state 9
    expr                           shift and go to state 10
    header                         shift and go to state 12
    declaration                    shift and go to state 13
    function                       shift and go to state 14
    left_flower                    shift and go to state 15
    exprOR                         shift and go to state 16
    exprAND                        shift and go to state 23
    exprBITOR                      shift and go to state 24
    exprBITXOR                     shift and go to state 25
    exprBITAND                     shift and go to state 26
    exprEQ                         shift and go to state 27
    exprRELOP                      shift and go to state 28
    exprSHIFT                      shift and go to state 29
    exprOP                         shift and go to state 30
    term                           shift and go to state 32
    factor                         shift and go to state 34
    brace                          shift and go to state 38
    NUM                            shift and go to state 39
    function_call                  shift and go to state 41

state 3

    (3) multiple_statements -> statement .

    IF              reduce using rule 3 (multiple_statements -> statement .)
    WHILE           reduce using rule 3 (multiple_statements -> statement .)
    SEMICOLON       reduce using rule 3 (multiple_statements -> statement .)
    HASH            reduce using rule 3 (multiple_statements -> statement .)
    TYPE            reduce using rule 3 (multiple_statements -> statement .)
    L_FLOWBRACE     reduce using rule 3 (multiple_statements -> statement .)
    NOT             reduce using rule 3 (multiple_statements -> statement .)
    PLUS            reduce using rule 3 (multiple_statements -> statement .)
    MINUS           reduce using rule 3 (multiple_statements -> statement .)
    PLUS_PLUS       reduce using rule 3 (multiple_statements -> statement .)
    MINUS_MINUS     reduce using rule 3 (multiple_statements -> statement .)
    L_PAREN         reduce using rule 3 (multiple_statements -> statement .)
    STRING          reduce using rule 3 (multiple_statements -> statement .)
    ID              reduce using rule 3 (multiple_statements -> statement .)
    CHAR            reduce using rule 3 (multiple_statements -> statement .)
    INT_NUM         reduce using rule 3 (multiple_statements -> statement .)
    FLOAT_NUM       reduce using rule 3 (multiple_statements -> statement .)
    $end            reduce using rule 3 (multiple_statements -> statement .)
    R_FLOWBRACE     reduce using rule 3 (multiple_statements -> statement .)


state 4

    (4) statement -> open .

    IF              reduce using rule 4 (statement -> open .)
    WHILE           reduce using rule 4 (statement -> open .)
    SEMICOLON       reduce using rule 4 (statement -> open .)
    HASH            reduce using rule 4 (statement -> open .)
    TYPE            reduce using rule 4 (statement -> open .)
    L_FLOWBRACE     reduce using rule 4 (statement -> open .)
    NOT             reduce using rule 4 (statement -> open .)
    PLUS            reduce using rule 4 (statement -> open .)
    MINUS           reduce using rule 4 (statement -> open .)
    PLUS_PLUS       reduce using rule 4 (statement -> open .)
    MINUS_MINUS     reduce using rule 4 (statement -> open .)
    L_PAREN         reduce using rule 4 (statement -> open .)
    STRING          reduce using rule 4 (statement -> open .)
    ID              reduce using rule 4 (statement -> open .)
    CHAR            reduce using rule 4 (statement -> open .)
    INT_NUM         reduce using rule 4 (statement -> open .)
    FLOAT_NUM       reduce using rule 4 (statement -> open .)
    $end            reduce using rule 4 (statement -> open .)
    R_FLOWBRACE     reduce using rule 4 (statement -> open .)


state 5

    (5) statement -> closed .

    IF              reduce using rule 5 (statement -> closed .)
    WHILE           reduce using rule 5 (statement -> closed .)
    SEMICOLON       reduce using rule 5 (statement -> closed .)
    HASH            reduce using rule 5 (statement -> closed .)
    TYPE            reduce using rule 5 (statement -> closed .)
    L_FLOWBRACE     reduce using rule 5 (statement -> closed .)
    NOT             reduce using rule 5 (statement -> closed .)
    PLUS            reduce using rule 5 (statement -> closed .)
    MINUS           reduce using rule 5 (statement -> closed .)
    PLUS_PLUS       reduce using rule 5 (statement -> closed .)
    MINUS_MINUS     reduce using rule 5 (statement -> closed .)
    L_PAREN         reduce using rule 5 (statement -> closed .)
    STRING          reduce using rule 5 (statement -> closed .)
    ID              reduce using rule 5 (statement -> closed .)
    CHAR            reduce using rule 5 (statement -> closed .)
    INT_NUM         reduce using rule 5 (statement -> closed .)
    FLOAT_NUM       reduce using rule 5 (statement -> closed .)
    $end            reduce using rule 5 (statement -> closed .)
    R_FLOWBRACE     reduce using rule 5 (statement -> closed .)


state 6

    (6) open -> IF . condition statement
    (7) open -> IF . condition closed ELSE open
    (11) closed -> IF . condition closed ELSE closed
    (13) condition -> . L_PAREN expr R_PAREN

    L_PAREN         shift and go to state 46

    condition                      shift and go to state 45

state 7

    (8) open -> WHILE . condition open
    (12) closed -> WHILE . condition closed
    (13) condition -> . L_PAREN expr R_PAREN

    L_PAREN         shift and go to state 46

    condition                      shift and go to state 47

state 8

    (9) closed -> simple .

    IF              reduce using rule 9 (closed -> simple .)
    WHILE           reduce using rule 9 (closed -> simple .)
    SEMICOLON       reduce using rule 9 (closed -> simple .)
    HASH            reduce using rule 9 (closed -> simple .)
    TYPE            reduce using rule 9 (closed -> simple .)
    L_FLOWBRACE     reduce using rule 9 (closed -> simple .)
    NOT             reduce using rule 9 (closed -> simple .)
    PLUS            reduce using rule 9 (closed -> simple .)
    MINUS           reduce using rule 9 (closed -> simple .)
    PLUS_PLUS       reduce using rule 9 (closed -> simple .)
    MINUS_MINUS     reduce using rule 9 (closed -> simple .)
    L_PAREN         reduce using rule 9 (closed -> simple .)
    STRING          reduce using rule 9 (closed -> simple .)
    ID              reduce using rule 9 (closed -> simple .)
    CHAR            reduce using rule 9 (closed -> simple .)
    INT_NUM         reduce using rule 9 (closed -> simple .)
    FLOAT_NUM       reduce using rule 9 (closed -> simple .)
    $end            reduce using rule 9 (closed -> simple .)
    R_FLOWBRACE     reduce using rule 9 (closed -> simple .)
    ELSE            reduce using rule 9 (closed -> simple .)


state 9

    (10) closed -> block .

    IF              reduce using rule 10 (closed -> block .)
    WHILE           reduce using rule 10 (closed -> block .)
    SEMICOLON       reduce using rule 10 (closed -> block .)
    HASH            reduce using rule 10 (closed -> block .)
    TYPE            reduce using rule 10 (closed -> block .)
    L_FLOWBRACE     reduce using rule 10 (closed -> block .)
    NOT             reduce using rule 10 (closed -> block .)
    PLUS            reduce using rule 10 (closed -> block .)
    MINUS           reduce using rule 10 (closed -> block .)
    PLUS_PLUS       reduce using rule 10 (closed -> block .)
    MINUS_MINUS     reduce using rule 10 (closed -> block .)
    L_PAREN         reduce using rule 10 (closed -> block .)
    STRING          reduce using rule 10 (closed -> block .)
    ID              reduce using rule 10 (closed -> block .)
    CHAR            reduce using rule 10 (closed -> block .)
    INT_NUM         reduce using rule 10 (closed -> block .)
    FLOAT_NUM       reduce using rule 10 (closed -> block .)
    $end            reduce using rule 10 (closed -> block .)
    R_FLOWBRACE     reduce using rule 10 (closed -> block .)
    ELSE            reduce using rule 10 (closed -> block .)


state 10
